@@ -4,6 +4,7 @@
 [ ] Toggle between horizontal and vertical columns
 [ ] Handle correctly multiple screens
 [X] Setting whether to display the window title
+[X] Setting to choose hint keys
 [ ] Save original border and restore it when untiling
 [ ] Show how many columns are configured. (?)
 [ ] Remove remaining bugs ☺.
