@@ -1,3 +1,4 @@
+    * add setting to choose key hints
     * add setting whether to display the window title
 
 v0.5 July 17, 2011
